--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ akka {
   remote {
     artery {
       transport = tcp
-      canonical.hostname = "192.168.0.10" # TODO : Replace by ambience-diffuser.local
+      canonical.hostname = "ambiencediffuser.local" # TODO : Replace by ambience-diffuser.local
       canonical.port = 25521
     }
   }
